<resources>
    <string name="app_name">学生信息管理系统</string>
    <string name="title_home">我的</string>
    <string name="title_dashboard">课表</string>
    <string name="title_notifications">信息</string>
    <string name="title_manage">管理</string>
    <string name="login_name">用户名:</string>
    <string name="login_password">密 码:</string>
    <string name="name">姓名：</string>
    <string name="sno">学号：</string>
    <string name="tno">工号：</string>
    <string name="sex">性别：</string>
    <string name="password">密码：</string>
    <string name="role">身份：</string>
    <string name="phone">手机号：</string>
    <string name="birthday">生日：</string>
    <string name="enrollmentDate">入学日期：</string>
    <string name="classed">班级：</string>
    <string name="teacher">导师：</string>
    <string name="counselor">辅导员：</string>
    <string name="sno_hint">请输入学号</string>
    <string name="change_password">修改密码</string>
    <string name="exit">退出</string>
    <string name="old_password">旧密码:</string>
    <string name="new_password">新密码:</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="morning1">  9:00-10:20</string>
    <string name="morning2">10:40-12:00</string>
    <string name="afternoon1">14:00-15:20</string>
    <string name="afternoon2">15:30-16:50</string>
    <string name="afternoon3">17:00-18:20</string>
    <string name="evening1">19:00-20:20</string>
    <string name="evening2">20:30-21:50</string>
    <string name="time_manage">课程表管理</string>
    <string name="score_manage">成绩管理</string>
    <string name="student_information_manage">学生信息管理</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="find">查找</string>
    <string name="modify">修改</string>
    <string name="back">返回</string>
</resources>