<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b"
    tools:context=".ui.activity.ChangePasswordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp"
            android:text="@string/old_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="185dp"
            android:layout_toRightOf="@+id/textview1"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/textview2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_alignRight="@+id/textview1"
            android:layout_below="@+id/textview1"
            android:text="@string/new_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/textview2"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/oldPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/ok"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="150dp"
            android:layout_marginBottom="248dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="167dp"
            android:text="@string/cancel" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>